--- a/client/src/components/chat_views/Messages/Message/Message.css
+++ b/client/src/components/chat_views/Messages/Message/Message.css
@@ -1,5 +1,5 @@
 .messageBox {
-  background: #F3F3F3;
+  background: #f3f3f3;
   border-radius: 20px;
   padding: 5px 20px;
   color: white;
@@ -13,6 +13,7 @@
   float: left;
   font-size: 1.1em;
   word-wrap: break-word;
+  margin-bottom: 0;
 }
 
 .messageText img {
@@ -59,9 +60,9 @@
 }
 
 .backgroundBlue {
-  background: #2979FF;
+  background: #2979ff;
 }
 
 .backgroundLight {
-  background: #F3F3F3;
+  background: #f3f3f3;
 }
